--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,8 +14,7 @@ a {
   color: #1ba12d;
 
 }
-
-.navbar {
+nav.navbar {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -28,7 +27,7 @@ a {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  padding: 0.5rem 1rem;
+  padding: 0;
 }
 
 .navbar-nav {
@@ -53,6 +52,64 @@ a {
   -ms-flex-align: center;
   align-items: center;
 }
+.navbar-expand-lg .navbar-nav .nav-link {
+  font-size: 14px;
+  padding-top: 2.3rem;
+  padding-bottom: 2.3rem;
+  padding-left: 18px !important;
+  padding-right: 18px !important;
+  font-weight: 700;
+  color: #000000;
+  position: relative;
+  text-transform: uppercase;
+  opacity: 1 !important;
+}
+@media (max-width: 991px) {
+  .navbar-expand-lg .navbar-nav .nav-link  {
+    padding: .9rem 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05); } }
+
+.navbar-nav .nav-link:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0px;
+  left: 0;
+  background-color: #1ba12d;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  -ms-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.5s ease-in-out 0s;
+  -o-transition: all 0.5s ease-in-out 0s;
+  transition: all 0.5s ease-in-out 0s;
+  z-index: -1;
+}
+
+.navbar-nav > .nav-link:hover{
+  color: #1ba12d;
+}
+.navbar-nav > .nav-link:hover:before {
+  visibility: visible;
+  background-color: #1ba12d;
+  -webkit-transform: scaleX(1);
+  -ms-transform: scaleX(1);
+  transform: scaleX(1);
+  z-index: 1;
+}
+.navbar-nav > .nav-link.active {
+  color: #1ba12d !important;
+}
+.navbar-nav > .nav-link.active:before {
+  visibility: visible;
+  background-color: #1ba12d;
+  -webkit-transform: scaleX(1);
+  -ms-transform: scaleX(1);
+  transform: scaleX(1); 
+  z-index: 1;
+}
+
 * {
   box-sizing: border-box;
 }
