--- a/components/Footer/footer.module.scss
+++ b/components/Footer/footer.module.scss
@@ -1,5 +1,47 @@
-.container {
-    display: flex;
-    background: black;
-    min-height: 20px;
+.footer {
+    padding: 0;
+    overflow: hidden;
+    background: #252525;
+
+    .footerHeading {
+        font-size: 18px;
+        margin-bottom: 30px;
+        font-weight: 600;
+        color: #fff;
+        text-transform: uppercase;
+    }
+
+    .ftcoAnimate {
+        list-style: none;
+        margin: 0 10px 0 0;
+        display: inline-block;
+
+        a {
+            height: 40px;
+            width: 40px;
+            display: block;
+            float: left;
+            background: rgba(255, 255, 255, 0.05);
+            border-radius: 50%;
+            position: relative;
+        }
+    }
+    a{
+        color: #1ba12d;
+    }
+    .footerHeading {
+        font-size: 18px;
+        margin-bottom: 30px;
+        font-weight: 600;
+        color: #fff;
+        text-transform: uppercase;
+    }
+
+    .asideStretchRight {
+        background: #333333;
+
+        &:after {
+            background: #333333;
+        }
+    }
 }
